--- a/server/package.json
+++ b/server/package.json
@@ -10,16 +10,17 @@
     "seed": "node scripts/seedDatabase.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
-    "compression": "^1.7.4",
-    "express-rate-limit": "^7.1.5"
+    "uuid": "^11.1.0"
   },
   "keywords": [
     "legal",
