--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server.js",
-    "seed": "node scripts/seedDatabase.js"
+    "seed": "node scripts/seedDatabase.js",
+    "build": "echo 'No build step required for Node.js'",
+    "test": "echo 'Tests not implemented yet'",
+    "lint": "echo 'Linting not configured yet'"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
